--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,9 @@ body::before {
 }
 
 .main-nav a {
-  display: inline-block;
-  transform: rotate(-18deg);
+  display: inline-block;  
   font-size: 1.2rem;
   font-weight: 600;
-transition: transform 0.2s ease, color 0.2s ease;
 }
 
 .main-nav a:hover {
@@ -299,6 +297,11 @@ text-align: center;
 
 /* Hover-Effekte NUR für Geräte mit echter Maus */
 @media (hover: hover) {
+.main-nav a {
+   transform: rotate(-18deg);
+   transition: transform 0.2s ease, color 0.2 ease;
+}
+   
   .main-nav a:hover {
     color: #2563eb;
     transform: rotate(-18deg) scale(1.05);
@@ -371,4 +374,5 @@ text-align: center;
 .site-footer a:hover {
   text-decoration: underline;
 }
+
 
