--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,8 @@ section {
 @media (max-width: 768px) {
 
   .projekt-layout {
-    grid-template-columns: 1fr;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
   }
 
@@ -327,6 +328,7 @@ section {
   }
 
 }
+
 
 
 
