--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,14 @@ section {
 
 @media (max-width: 768px) {
 
+   .nav-list {
+      gap: 1.2rem;
+   }
+
+   .main-nav a {
+      font-size: 1.05rem;
+   }
+
   .projekt-layout {
     flex-direction: column;
     align-items: center;
@@ -325,9 +333,10 @@ section {
 
   .projekt-bild {
     width: 80%;
-  }
+  }   
 
 }
+
 
 
 
