--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,12 @@ body::before {
   content: "";
   position: fixed;
   inset: 0;
-  background: url("../bilder/infinity2.png");
+  background:
+    linear-gradient(
+      rgba(255,255,255,0.2),
+      rgba(255,255,255,0.2)
+    ),
+    url("../bilder/infinity2.png");
   background-size: cover;
   background-position: center;
   z-index: -1;
@@ -330,6 +335,7 @@ section {
   }   
 
 }
+
 
 
 
