--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body::before {
 /* Scroll-Anker unter Sticky Header */
 section {
   scroll-margin-top: 120px;
+   padding: 5rem 1.5rem;
 }
 
 /* Fade-in Animation */
@@ -335,6 +336,7 @@ section {
   }   
 
 }
+
 
 
 
