--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ a:hover {
 /* Scroll-Anker unter Sticky Header */
 section {
   scroll-margin-top: 120px;   
+   padding: 5rem 1.5rem;
 }
 
 /* Fade-in Animation */
@@ -345,6 +346,7 @@ section {
   }   
 
 }
+
 
 
 
