--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ section {
 
 .projekt h3 {
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1.2rem;
 }
 
 .projekt p {
@@ -251,6 +251,7 @@ section {
 
 .projekt-media {
   display: flex;
+   flex-shrink: 0;
   justify-content: center;
 }
 
@@ -330,6 +331,7 @@ section {
   }   
 
 }
+
 
 
 
