--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body::before {
       rgba(255,255,255,0.2),
       rgba(255,255,255,0.2)
     ),
-    url("../bilder/infinite-5913075_1280.png");
+    url("../bilder/ai-generated-8887363_1280.jpg");
   background-size: cover;
   background-position: center;
   z-index: -1;
@@ -325,6 +325,7 @@ section {
   }   
 
 }
+
 
 
 
