--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ section {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(255,255,255,0.4);
+  background: rgba(255,255,255,0.7);
   backdrop-filter: blur(10px);
   z-index: -1;
 }
@@ -85,7 +85,7 @@ section {
   display: inline-block;
   font-size: 1.2rem;
   font-weight: 600;
-   color: #2563eb;
+   color: #1e3a8a;
   transition: transform 0.2s ease, color 0.2s ease;
 }
 
@@ -200,8 +200,8 @@ section {
 ========================= */
 
 .projekt {
-   background: rgba(255,255,255,0.6); /* ← NEU */
-  border-radius: 1rem;              /* ← NEU */
+   background: rgba(255,255,255,0.6);
+  border-radius: 1rem;              
   padding: 3rem 1.5rem;
   margin-bottom: 5rem;  
 }
@@ -393,6 +393,7 @@ section {
   }   
 
 }
+
 
 
 
