--- a/css/style.css
+++ b/css/style.css
@@ -359,7 +359,7 @@ section {
 .site-footer {
   text-align: center;
   padding: 2rem 1.5rem;
-  color: #1f2937;
+  color: #1e3a8a;
 }
 
 .site-footer a {
@@ -434,6 +434,7 @@ section {
   }   
 
 }
+
 
 
 
